--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -1,10 +1,10 @@
 ---
-title: "[QF] Probing Volatility I: Eigen Decomposition of Covariance Matrices"
+title: "[QF-Research] Probing Volatility I: Eigen Decomposition of Covariance Matrices"
 date: 2020-05-08
 tags: [qf]
 header:
   image: "/images/qf_intro_banner.jpg"
-excerpt: "Exploring volatility through a linear algebraic approach, commonly known as Principal Component Analysis (PCA) in various other non-finance purposes."
+excerpt: "Exploring volatility through a linear algebraic approach, topics commonly known as Principal Component Analysis (PCA), Clustering Algorithms, etc... in various other non-finance purposes."
 mathjax: "true"
 ---
 
@@ -33,9 +33,18 @@ Important points to highlight:
 - The covariance value <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_{ij}" title="\sigma_{ij}" /> encompasses/derives a relevant metric **correlation** <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\rho_{ij}&space;=&space;\frac{\sigma_{ij}}{\sigma_i&space;\sigma_j}" title="\rho_{ij} = \frac{\sigma_{ij}}{\sigma_i \sigma_j}" />, where such value, unlike covariance, is **bounded** between (-1,1)
 
 ---
-For demonstration purposes moving forward, I have preprocessed & cleaned a returns table $$RET$$, logarithmically calculated from **daily close prices from Apil 2019 - April 2020** (encompassing the latest COVID-19 market crash), of 947 securities on the U.S. Equities Market, including individual stocks in all industries/sectors as well as ETFs of domestic (*SPY, XLK, XLV, etc...*) & foreign securities (*FXI, EWJ, etc...* ). Data obtained with IEX Cloud API.
+For demonstration purposes moving forward, I have preprocessed & cleaned a returns table $$RET$$, logarithmically calculated from **daily close prices from Apil 2019 - April 2020** (encompassing the latest COVID-19 market crash), of 950-1000 securities on the U.S. Equities Market, including individual stocks in all industries/sectors as well as ETFs of domestic (*SPY, XLK, XLV, etc...*) & foreign securities (*FXI, EWJ, etc...* ). Data obtained with IEX Cloud API
 
 ```python
+#---| Initialize all modules needed |---#
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+from mpl_toolkits.mplot3d import Axes3D
+from sklearn.decomposition import PCA
+
+#----| Load preprocess RET Table
+RET = pd.read_csv("ret.csv",index_col=0,header=0)
 RET
 ```
 
@@ -405,7 +414,9 @@ They indeed do match. We proceed onto the next step.
 From a linear algebraic perspective, specifically in our approach, a matrix acts as a vector space, defined by a system of equations, containing subspaces such as row space, column space, etc... as well as an operator that perform transformation, or mapping, of vectors from one subspace to another.
 >**Example**: Casting a shadow of an object = mapping a 3D entity to its 2D form
 
-In this work, we are exploring a mapping from N-dimensional space to another N-dimensional space, specifically working with a square matrix. The main point of Eigen Decomposition is simply to find **[invariant subspaces](https://en.wikipedia.org/wiki/Invariant_subspace "invariant subspaces") under transformation by a square matrix**.
+In this work, we are exploring a mapping from N-dimensional space to another N-dimensional space, specifically working with a square matrix. The main point of Eigen Decomposition is simply to find **[invariant subspaces](https://en.wikipedia.org/wiki/Invariant_subspace "invariant subspaces") under transformation by a square matrix**. The analysis of such extracted eigen pairs is otherwise known as Principal Component Analysis (PCA), commonly used in other non-finance topics for dimensionality reduction, clustering data features, etc...
+
+> **NOTE**: Unlike the common usages such as compression of images' pixels, or classification of different plant types, we are utilizing PCA to extract eigen components from a covariance matrix calculated from time series datasets of financial instruments. Always keep this context in mind when approaching mathematically, abstract or applied.
 
 Given our *M x M* covariance matrix <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\boldsymbol{C}" title="\boldsymbol{C}" /> of M securities, as square matrix calculated from returns of *N* time indexes, we seek to find <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;e_i" title="e_i" /> and <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\lambda_i" title="\lambda_i" /> , respectively as the **eigen vectors** and **eigen values**, where for <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;i&space;=&space;1,2,...,M" title="i = 1,2,...,M" />, comes with such **eigen pair** that satisfy the condition:
 <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\dpi{150}&space;\boldsymbol{C}&space;\cdot&space;e_i&space;=&space;\lambda_i&space;e_i" title="\boldsymbol{C} \cdot e_i = \lambda_i e_i" /> such that:
@@ -425,8 +436,7 @@ To observe the significance of to why this is powerful when it comes to applying
 - Each eigen value <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\lambda_i" title="\lambda_i" /> simply represents the **directional variance** of its associated eigen vector <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;e_i" title="e_i" /> , independent from one another, such that together they **explain** the total volatility of *M* securities, without any specified allocations.
 
 ---
-
-We will first visualize the meaning of such extract eigen pairs by giving an example of two securities -  **SPY**(*S&P500 ETF*) and **IEF**(*7-10 Year Treasury ETF* ).
+We will first visualize the meaning of such extract eigen pairs by giving an example of two securities -  **SPY**(*S&P500 ETF*) and **IEF**(*7-10 Year Treasury ETF*).
 Plotting their returns against each other in **2-Dimensional Space** and we have:
 
 ```python
@@ -435,8 +445,7 @@ ax.set_aspect("equal")
 ```
 <img src="https://i.ibb.co/pRnprzW/1.png" alt="1" border="0">
 
-
-Observe the relationship between two assets, exhibiting negative correlation, reflecting behaviorial through the financial market (i.e.: As the market goes down, demand falls for equities and rises in treasury, like what happened during COVID-19 market crash). 
+Observe the relationship between two assets, exhibiting negative correlation, reflecting behaviorially through the financial market (i.e.: As the market goes down, demand falls for equities and rises in treasury, especially during COVID-19 market crash ). 
 
 ```python
 RET[["SPY","IEF"]].corr()
@@ -478,7 +487,7 @@ RET[["SPY","IEF"]].corr()
 </table>
 </div>
 
-If we plot the cummulative returns between the two assets, we can see their correlational properties as exhibited through the scatter plot:
+If we plot the cummulative returns between the two assets, we can distinctly observe their correlational properties as exhibited through the scatter plot:
 
 ```python
 (1+RET[["SPY","IEF"]]).cumprod().plot()
@@ -486,133 +495,138 @@ If we plot the cummulative returns between the two assets, we can see their corr
 
 <img src="https://i.ibb.co/Zd9h67Z/2.png" alt="2" border="0">
 
-Using numpy's linalg module to extract our eigen pairs. I have written a function carrying out this calculation with any input $$RET$$ table:
+
+Using numpy's linalg module to extract our eigen pairs. Below is our pre-coded function to perform PCA, working on dataframe being inputted & return the eigen vectors & eigen values:
 
 ```python
-#----| Perform Eigen Decomposition on Covariance Matrix of any given returns table 
+#----| Perform Eigen Decomposition on Covariance Matrix of any given returns table, standardized/normalized or not
 #----- dynamic for any NxM size of returns matrix
-def PCA(ret):
-    eVals,eVecs = np.linalg.eigh(ret.cov())
-    eVals = eVals[::-1]
-    eVecs = eVecs[::-1]
-    _eigens = pd.DataFrame(eVecs.T,columns = eVals,index=ret.columns)
-    _eigenNames = ["eigen_"+str(e+1) for e in range(len(_eigens.columns))]
-    _eigenVectors = pd.DataFrame(_eigens.values,index=_eigens.index,columns=_eigenNames)
-    _eigenValues = pd.Series(list(_eigens.columns),index=_eigenNames,name="eigenValues")
-    return _eigenVectors, _eigenValues
+def EIGEN(ret,_simple=False):
+    _pca = PCA().fit(ret)
+    eVecs = _pca.components_
+    eVals = _pca.explained_variance_
+    _eigenNames = ["eigen_"+str(e+1) for e in range(len(eVals))]
+    _eigenValues = pd.Series(eVals,index=_eigenNames,name="eigenValues")
+    _eigenVectors = pd.DataFrame(eVecs.T,index=ret.columns,columns=_eigenNames)
+    return _eigenVectors,_eigenValues
 ```
-
-We can also use scikit to compute this, although to be as specific & transparent as possible, we will stick with our authentic version.
-
-With each eigen vector magnified by 3 times the square root of its associated eigen value (since each eigen value represents the directional variance of such eigen vector, as stated above), graphing such vectors on top of the scatter plot, each in both directions, we obtain:
+With each eigen vector magnified by 3 times the square root of its associated eigen value (since each eigen value represents the directional variance of such eigen vector, as stated above), graphing such vectors on top of the scatter plot, each in both directions, using *matplpotlib* we obtain:
 
 ```python
-ax = RET.plot.scatter("SPY","IEF",alpha=0.2)
-ret_table = RET[["SPY","IEF"]]
-
-x,y = list(ret_table.columns)
-vectors,lambdas = PCA(ret_table)
-_start = ret_table.mean(axis=0)
+ax = plt.figure().gca()
+ret = RET[["SPY","IEF"]]
+x,y = list(ret.columns)
+vectors,lambdas = EIGEN(ret)
+ax.scatter(ret[x], ret[y], alpha=0.1)
+ax.set_xlabel(x)
+ax.set_ylabel(y)
+_start = ret.mean(axis=0)
 _colors = pd.Series(["red","green"],index=lambdas.index)
 for e in lambdas.index:
     v = vectors[e] * (3*np.sqrt(lambdas[e]))
     ax.plot([_start[x]-v[x],_start[x]+v[x]],
               [_start[y]-v[y],_start[y]+v[y]],color=_colors[e],linewidth=2,label=e)
 ax.set_aspect("equal")
-```
-
-<img src="https://i.ibb.co/VCXtjNb/3.png" alt="3" border="0">
-
-> **REMARK**: The eigen components are orthogonal to each other, encapsulating the magnitudes of standard deviation in both dimensions. We interpret M eigen values as **independently explained variances** that, together, describe the **total variance** of our M selected securities.
-
-We can further perform this step for not just 2-dimensional space (M=2) but also 3-dimensional space (M=3), you can see how such mathematics can take us further to any M-dimensional space such that we can describe the entire variance of M securities , in such abstract vector space that we can't visualize, down to the independent components.
-
-Combining all the written codes above, we compile a **single function** for 2 & 3 dimensional data (to be modified for more functionalities below):
-
-
-```python
-#----| Plot (with labels) & return result of 2 or 3 selected assets with each other with given table
-def EIGEN(ret):
-    assert(ret.shape[1] in [2,3]),"2-3 assets only"
-    fig = plt.figure()
-    _ax_ = fig.gca() if (ret.shape[1] == 2) else fig.gca(projection="3d")
-    vectors,lambdas = PCA(ret)
-    explained_variance_ratio = lambdas/lambdas.sum()
-    _labels = pd.Series([(i+" - "+str(
-                    (explained_variance_ratio[i]*100).round(2))+"%") for i in explained_variance_ratio.index],
-                           index=explained_variance_ratio.index)
-    result = {"vectors":vectors,"lambdas":lambdas,
-              "explained_variance_ratio":explained_variance_ratio}
-
-    #----| 2-DIMENSIONAL
-    if ret.shape[1] == 2:
-        x,y = list(ret.columns)
-        _ax_.scatter(ret[x], ret[y], alpha=0.1)
-        _ax_.set_xlabel(x)
-        _ax_.set_ylabel(y)
-        _start = ret.mean(axis=0)
-        _colors = pd.Series(["red","green"],index=lambdas.index)
-        for e in lambdas.index:
-            v = vectors[e] * (3*np.sqrt(lambdas[e]))
-            _ax_.plot([_start[x]-v[x],_start[x]+v[x]],
-                      [_start[y]-v[y],_start[y]+v[y]],
-                      color=_colors[e],linewidth=2,label=_labels[e])
-        _ax_.set_aspect("equal")
-    #---| 3-DIMENSIONAL
-    else:
-        #----| We can't set_aspect for 3D just yet in matplotlib - build our own custom way of doing it
-        def set_axes_equal(ax):
-            x_limits = ax.get_xlim3d()
-            y_limits = ax.get_ylim3d()
-            z_limits = ax.get_zlim3d()
-
-            x_range = abs(x_limits[1] - x_limits[0])
-            x_middle = np.mean(x_limits)
-            y_range = abs(y_limits[1] - y_limits[0])
-            y_middle = np.mean(y_limits)
-            z_range = abs(z_limits[1] - z_limits[0])
-            z_middle = np.mean(z_limits)
-            
-            plot_radius = 0.32*max([x_range, y_range, z_range])
-
-            ax.set_xlim3d([x_middle - plot_radius, x_middle + plot_radius])
-            ax.set_ylim3d([y_middle - plot_radius, y_middle + plot_radius])
-            ax.set_zlim3d([z_middle - plot_radius, z_middle + plot_radius])
-
-        x,y,z = list(ret.columns)
-        #-----| Plot returns data
-        _ax_.scatter(ret[x], ret[y], ret[z],alpha=0.1)
-        _ax_.set_xlabel(x)
-        _ax_.set_ylabel(y)
-        _ax_.set_zlabel(z)
-        _start = ret.mean(axis=0)
-        #----| plot Eigen Vectors & magnified with associated Eigen Value
-        _colors = pd.Series(["red","green","purple"],index=lambdas.index)
-        for e in lambdas.index:
-            v = vectors[e] * (3*np.sqrt(lambdas[e]))
-            _ax_.quiver(_start[x],_start[y],_start[z],
-                       _start[x]+v[x],_start[y]+v[y],_start[z]+v[z],
-                       color=_colors[e],lw=2)
-            _ax_.quiver(_start[x],_start[y],_start[z],
-                       _start[x]-v[x],_start[y]-v[y],_start[z]-v[z],
-                       color=_colors[e],lw=2,label=_labels[e])
-        set_axes_equal(_ax_)
-    _ax_.legend()
-    result["axis"] = _ax_
-    return result
-```
-
-Calling it on our demonstrated example of SPY v.s. IEF, we obtain:
-
-```python
-result = EIGEN(RET[["SPY","IEF"]])
+ax.legend()
 ```
 
 <img src="https://i.ibb.co/8B6N4M3/4.png" alt="4" border="0">
 
-You can perform this analysis on any such visualizable amount of securities given the returns table inputted. Below are results of various examples I have selected to showcase certain interesting relationships:
+> **REMARK**: The eigen components are orthogonal to each other, encapsulating the magnitudes of standard deviation in both dimensions. We interpret M eigen values as **independently explained variances** that, together, describe the **total variance** of our M selected securities.Such mathematical approach can take us further to any M-dimensional space such that we can describe the entire variance of M securities, in such abstract vector space that we can't visualize, down to the independent components. 
 
-[GRAPHS & INFO SHOWCASE IN PROGRESS]
+### Plotly 3D Visualization
+For the sake of illustration & fancy observation, below are functions written to actually plot such results for 3 Dimensional Space (M=3) using Plotly, a powerful data visualization module:
+
+```python
+#----| Plot (with labels) & return result of 3 selected assets with each other with given table
+def EIGEN_3D(ret,_AX=None,_plotRadius=0.5):
+    assert(ret.shape[1] == 3),"3 assets only"
+    vectors,lambdas = EIGEN(ret)
+    _start = ret.mean(axis=0)
+    x,y,z = list(ret.columns)
+    explained_variance = lambdas/lambdas.sum()
+    _names = pd.Series([(i+" - "+str(
+                    (explained_variance[i]*100).round(2))+"%") for i in explained_variance.index],
+                           index=explained_variance.index)
+    result = {"vectors":vectors,"lambdas":lambdas,
+              "explained_variance":explained_variance}
+
+    _DATA_ = []
+    #----| SCATTER PLOT OF RETURNS DATA |----#
+    _DATA_.append(go.Scatter3d(x=RET[x],y=RET[y],z=RET[z],mode="markers",marker=dict(
+                                size=5,opacity=0.2),name=" - ".join([ret.index[0],ret.index[-1]])))
+
+    #----| LINE PLOT OF EIGEN COMPONENTS |----#
+    for e in lambdas.index:
+        v = vectors[e] * (3*np.sqrt(lambdas[e]))
+        _DATA_.append(go.Scatter3d(x=[_start[x]-v[x],_start[x]+v[x]],
+                                   y=[_start[y]-v[y],_start[y]+v[y]],
+                                   z=[_start[z]-v[z],_start[z]+v[z]],
+                                   mode="lines",line=dict(width=6),name=_names[e]))
+
+    fig = go.Figure(_DATA_)
+    fig.update_layout(
+        title=" -vs- ".join(list(ret.columns)),
+        scene=dict(
+        xaxis_title=x,
+        yaxis_title=y,
+        zaxis_title=z,aspectmode="auto"))
+    result["figure"] = fig
+    return result
+```
+Observe the results for 3 assets picked as **SPY**(*S&P500 ETF*), **IEF**(*7-10 Year Treasury ETF*) & **GLD** (SPDR Gold Shares), fundamentally representing different asset classes (stocks vs treasury vs gold), thus exihibiting minimal correlations to each other dimensionally.
+
+```python
+result = EIGEN_3D(RET[["SPY","IEF","GLD"]])
+result["figure"].show()
+```
+
+<div>
+
+
+            <div id="405fdfea-d82f-4437-9dda-f6df869a03cd" class="plotly-graph-div" style="height:525px; width:100%;"></div>
+            <script type="text/javascript">
+                require(["plotly"], function(Plotly) {
+                    window.PLOTLYENV=window.PLOTLYENV || {};
+
+                if (document.getElementById("405fdfea-d82f-4437-9dda-f6df869a03cd")) {
+                    Plotly.newPlot(
+                        '405fdfea-d82f-4437-9dda-f6df869a03cd',
+                        [{"marker": {"opacity": 0.2, "size": 5}, "mode": "markers", "name": "5/1/2019 - 5/1/2020", "type": "scatter3d", "x": [-0.007544886999999999, -0.002161273, 0.00974017, -0.004123717, -0.016840691, -0.0013901920000000002, -0.003030358, 0.0050107979999999995, -0.025451317999999997, 0.009003003, 0.005840356999999999, 0.009218585999999999, -0.006486057, -0.006634047, 0.008975273, -0.0030761729999999998, -0.012293865, 0.002265809, -0.009344036, -0.006733309, 0.002727438, -0.013566868999999999, -0.002546197, 0.021474434, 0.008624874, 0.006481635, 0.009957284, 0.004578413, -0.000242269, -0.001766877, 0.004117867, -0.00110566, 0.00038020800000000004, 0.010416581999999999, 0.0022546379999999998, 0.009509003, -0.006306602, -0.00122524, -0.009856343, -0.0009978839999999999, 0.003539705, 0.0051326029999999995, 0.009037536, 0.002600957, 0.00796335, -0.001138533, -0.0055100259999999995, 0.00124577, 0.004766709, 0.002341451, 0.0044669720000000005, 0.000332557, -0.003464014, -0.006594718, 0.003654227, -0.0055704840000000005, 0.002453494, 0.00712461, 0.0046885220000000005, -0.004788517, 0.006677655, -0.0018227920000000002, -0.0024577379999999997, -0.011000696, -0.008746067, -0.0075579969999999995, -0.030534605, 0.01392556, 0.000590514, 0.019430106000000003, -0.006834829000000001, -0.012248078999999999, 0.015432086000000001, -0.030013529, 0.002638292, 0.014647166999999999, 0.011975778999999999, -0.007692081, 0.008102492, -0.000307792, -0.026023194, 0.010997753999999998, -0.003931329, 0.007016840999999999, 0.012692141, -0.000444422, -0.005864315, 0.011286416, 0.012773465, 0.000771981, 0.000503145, -0.00023476900000000001, 0.007085828000000001, 0.003457795, -0.0006640330000000001, -0.0030935579999999997, 0.0025287829999999997, 0.000597987, -6.64e-05, -0.009343367, -0.000234706, -0.007877768, 0.0058973359999999996, -0.002085366, -0.005401769, 0.004627058, -0.011966042, -0.017822595, 0.008159359, 0.013441383999999999, -0.004323926, -0.015646543, 0.009451605, 0.006740714, 0.010313567, -0.001114432, 0.009851634, -0.0016072870000000002, 0.0029447220000000003, -0.00438678, 0.00675633, -0.003272123, 0.0029053770000000002, 0.001632653, 0.0040865879999999995, 0.005620779, -0.00029678, 0.003062487, -0.0026668000000000004, 0.009221192, 0.00400972, -0.001106771, 0.000227965, 0.0035106, 0.002463055, -0.0019115820000000002, 0.002105775, 0.000323572, 0.001454781, 0.007210254, 0.000737404, -0.000288485, -0.003725715, -0.001610203, 0.0022214, 0.007720314, 0.00226313, 0.004447558, -0.003715528, -0.008531085, -0.006729045, 0.006151289, 0.001796369, 0.009092567, -0.003149108, -0.001115698, 0.002834622, 0.008582113, 0.0074454890000000004, 0.000219068, 6.26e-05, 0.004090624, -0.0005298999999999999, 0.001526599, 3.11e-05, 0.00530917, -0.000247755, -0.005528479, 0.002426355, 0.009308434, -0.007601075, 0.0038077590000000004, -0.002815727, 0.005315381, 0.00675782, -0.002881846, 0.006853743000000001, -0.0015257860000000001, 0.0022573370000000003, 0.008283945, 0.0031077009999999996, -0.001960046, 0.000120729, 0.0011462010000000001, -0.008932821, -0.016159304, 0.010424609, -0.000826307, 0.0032401070000000003, -0.018324838, 0.007401133000000001, 0.015126286999999999, 0.011481876, 0.00335913, -0.005343914, 0.007437654, 0.0017314989999999998, 0.006422095, -0.001067489, 0.001600807, -0.00258034, 0.004769885, -0.004116756, -0.010351658, -0.03372785, -0.030770689, -0.0036850159999999997, -0.0459515, -0.004210391, 0.042395049000000004, -0.029050342000000003, 0.041173651, -0.033806769, -0.016669275, -0.081312592, 0.050450580999999994, -0.049976639, -0.100568916, 0.082028067, -0.115886536, 0.05258493400000001, -0.051959739000000005, 0.002122745, -0.049913409000000006, -0.025900727999999998, 0.086731006, 0.014859236000000001, 0.056748625, -0.030238206, 0.031959541, -0.01501761, -0.046049017000000005, 0.02281315, -0.014559675, 0.065006803, 0.001018887, 0.033017318, 0.01510269, -0.009172056999999999, 0.029066306, -0.021477097, 0.004812709, 0.026656932, -0.017774961000000002, -0.030833807999999997, 0.021951836000000002, -7.170000000000001e-05, 0.013842406000000002, 0.014315531999999999, -0.004609108, 0.025841767, -0.009354349, -0.026830154], "y": [-0.002458165, -0.002843873, 0.001328147, 0.002556456, 0.0033984740000000003, -0.001886615, 0.0026402659999999996, -0.0006594130000000001, 0.004981915999999999, -0.0009380860000000001, 0.00318591, -0.001966569, 0.000468582, -0.0016879220000000001, -0.001126866, 0.00300216, 0.00607053, -0.000279369, 0.004367834, -0.000370989, 0.003611282, 0.0066329119999999995, 0.002842344, -0.003669056, 0.0, -0.000183807, 0.003944416, -0.004955957, 0.0, 0.002572821, 0.002474682, 0.0007320639999999999, -0.00018296599999999998, 0.001919474, 0.00273573, 0.0016378529999999999, -0.004099673, 0.003463049, 0.001545385, -0.004095942, 0.00300533, 0.000454566, -0.003003962, 0.003549169, 0.001905886, -0.006367131, -0.001004245, -0.000639591, 0.000548246, -0.004945065, 0.001101019, 0.002106903, -0.002198608, 0.004666279000000001, 0.002461596, -0.0018228220000000002, 0.00045601699999999997, -0.001642636, 0.001460254, -0.001734289, -0.000182732, 0.000913325, 0.00045635, 0.002551719, 0.009511371999999999, 0.00207142, 0.008599892, 0.0016042779999999998, 0.0, 8.909999999999998e-05, -0.001514949, 0.006311974000000001, -0.00355114, 0.006648077, 0.00634084, -0.002637132, -0.004764435, 0.004412291, -0.0026450379999999997, -0.002209555, 0.006701965, -0.0009672460000000001, 0.0043014590000000005, 0.000350324, -0.001928303, 0.000263169, 0.000526131, 0.001576735, -0.008085113, 0.000617475, -0.00619197, -0.007302553000000001, -0.00098368, -0.002239241, -0.009188426, 0.004334484, 0.002609675, 0.00035942099999999996, 0.000449095, 0.005730675, 0.0014275520000000001, 0.0049804440000000005, -0.006586584, 0.002140946, 0.001424755, 0.000800534, 0.001244002, 0.0034572970000000002, 0.005207656, 0.0019349170000000002, -0.003344485, 0.002113607, -0.002554505, -0.0062818169999999994, -0.006857576999999999, 0.0027665, -0.004824022, 0.001968152, -0.000357558, 0.000893655, -0.0036690720000000002, 0.00232829, 0.00035771800000000003, -0.00017884299999999998, -0.0021486129999999997, -0.003771218, 0.0008992000000000001, 0.004841756, 0.006330545999999999, -0.0033831940000000004, -0.00509635, -0.005392787, 0.002879772, -0.008029998, -0.0013597429999999998, 0.001087942, 0.00045296, 0.00271346, 0.00504551, -0.000809171, 0.0017074820000000002, 0.001883831, 0.003667759, -0.0025033539999999997, -0.00017905099999999998, 0.00044756699999999995, 0.001877599, -0.002593803, -0.0008063430000000001, -0.005031909, 0.008878584, -0.003846675, -0.002333095, -0.003059207, 0.000810701, -0.001171224, 0.004138185, -0.007931542, 0.0011756730000000001, 9.04e-05, -0.0027149340000000004, -0.000634547, 0.0, -0.000907194, 0.001722966, 0.00144862, 0.001446524, -0.0006325969999999999, -0.0036225359999999996, 0.004616437, 0.006660691, -0.001077103, -0.001437944, -0.002341078, 0.000720916, 0.002159634, -0.001169223, 0.001977884, 0.002511663, -0.002062689, -0.000808299, 0.003945486, 0.000178971, 0.002502235, 0.0035637959999999997, 0.00673642, -0.003362537, 0.004774967, 0.0009698889999999999, 0.005010779, -0.00219462, -0.005817044, -0.0043407079999999995, 0.000709975, 0.004779193, 0.001940549, -0.002382109, -0.002564898, 0.000885191, 0.002474374, 0.001587442, -0.000176258, 0.002904292, 0.004034385, 0.007759749, 0.00277537, -0.000519796, 0.00484095, 0.011148387, -0.001877935, 0.011552966000000001, -0.0021983610000000002, 0.008848497, 0.010100674, 0.008930107, -0.01852751, -0.01002916, 0.000508087, -0.006540135, 0.026073807, -0.025392317999999997, -0.013977846, 0.003276147, 0.02515856, 0.011765332, -0.0068253969999999995, 0.000584478, 0.002417776, 0.007383781, 0.0023117579999999997, 0.00181264, 0.00287699, 0.00016415, 0.00073834, -0.004520618, -0.004458396, -0.001241979, 0.002151784, -0.002151784, 0.0013247229999999999, 0.00889627, 0.00106553, -0.002624889, 0.002624889, 0.002781415, -0.00310915, 0.0006553619999999999, 0.00024565, -0.005335973000000001, 0.0043530109999999995, -0.000491844, -0.00238066, 0.00032870400000000003], "z": [-0.006622541, -0.003827915, 0.0059021740000000005, 0.001325271, 0.003305515, -0.002478111, 0.002395606, 0.001895891, 0.010159858, -0.001713377, -0.000571779, -0.007216103000000001, -0.007102771999999999, -8.290000000000001e-05, -0.0023236520000000003, -0.000997506, 0.007704773000000001, 0.001072298, -0.0038822170000000003, 0.000330989, 0.0067612390000000005, 0.013386862, 0.014329661, 0.000319668, 0.002553668, 0.003262386, 0.005624445, -0.010003259, -0.001197557, 0.005179088, 0.00610072, -0.00031600599999999997, -0.000632311, 0.005047329000000001, 0.006038997, 0.024866146000000002, 0.00661373, 0.014741543000000001, 0.0019392860000000001, -0.009207686, -0.000978142, 0.002706362, -0.019559414, 0.021134748999999998, 0.001647694, -0.01121282, -0.00645335, 0.00349757, 0.01566415, -0.008479396, 0.00623523, 0.0, -0.008498528, 0.016331174, 0.014019266, -0.014836958, -0.00014874299999999998, -0.005668696, 0.005073502, -0.007095142, 0.00164757, 0.006637605, 0.003339397, -0.013199788999999998, 0.023738226, -0.003819322, 0.013885052, 0.008095454, 0.015075483, 0.005022115, -0.003321675, 0.009651701, -0.005977304, 0.0068182880000000005, 0.006632945, -0.006422809, -0.011765256000000002, 0.00776511, -0.0031693520000000003, -0.0025427329999999997, 0.019400405, 0.000138715, 0.009525196, -0.002820488, -0.007190296, -0.002570606, 0.013817146, 0.006224156999999999, -0.02429381, -0.008559654, -0.003741489, -0.008594719, 0.006045323000000001, 0.002054189, -0.008313545, 0.008313545, 0.001979359, -0.006305146, 0.0040427020000000004, 0.011751181999999999, 0.005580761, 0.00527303, -0.018719552, -0.000282068, -0.005161758, -0.015647088, 0.0054578230000000005, 0.011606097, 0.00452042, 0.0, -0.008563695999999999, 0.00870463, 0.00091559, -0.008767644, -0.005554779, 0.003991168, -0.006995031999999999, 0.005713893, 0.001423386, -0.00106735, -0.004781454, 0.002928678, 0.002351015, 0.00709072, 0.002328947, -0.008637222, -0.00277689, 0.00547518, 0.009948927, 0.000912313, -0.0028801259999999998, -0.016312418000000002, 0.004281134, -0.015643258, -0.006384698, -0.002404811, 0.00269591, 0.003994051, 0.004194698, -0.002529177, 0.002962109, 0.00050485, 0.000504595, -0.005492136999999999, -0.001885835, -0.004803153, 0.004803153, -0.005313934, 0.006184762, -0.00050789, 0.009534200000000001, -0.001366759, 0.000575705, -0.009977669, -0.000290698, 0.0028307040000000003, 0.0068619580000000005, -0.003533445, 0.004396879, -0.000215789, 7.190000000000001e-05, 0.002586208, 0.0010039439999999999, 0.0030772559999999996, 0.009387737, 0.007826587, -0.000351235, 0.002105559, 0.00189122, 0.007320932, 0.01318124, 0.010434877, 0.0039274159999999995, -0.007529798000000001, -0.0056676719999999995, 0.006008074, -0.00744717, -0.0008919080000000001, 0.005817352, -0.00157077, 0.0018436960000000001, 0.0010909589999999999, 0.00034068099999999996, 0.002245586, 0.005828549000000001, 0.00680206, -0.008966856, 0.005403228, 6.74e-05, 0.005775704, -0.006516869000000001, -0.013094254, 0.0012285010000000001, 0.00537398, 0.002642367, 0.002567916, -0.00344793, -0.000813008, 0.005677225, 0.004169755, 0.012737327, 0.005814354, 0.004076270999999999, 0.0149135, 0.008945006, -0.018035978, 0.004360992, 0.00019482400000000002, -0.037176052, 0.005511136999999999, 0.030950374, 0.001752963, 0.02137094, 0.000380904, 0.00164891, -0.02132714, -0.003566684, -0.040705606, -0.030991589, -0.011512131, 0.013464439, -0.020123102, -0.019086466, 0.01488433, 0.04323148, 0.04738958099999999, -0.013784268, 0.012740699, -0.006481413, 0.004391002, -0.032364854, 0.009411834, 0.016260521, 0.00492531, 0.027333463, -0.005368797, -0.008947886, 0.025788113999999997, 0.016995098, 0.007837369, -0.0051151009999999995, -0.000865373, -0.019608471000000002, 0.007100919, -0.006848696, 0.019479919, 0.00990564, -0.0042947490000000005, -0.006662579, -0.0044665090000000005, 0.0055181959999999995, -0.018282728999999998, 0.00615232]}, {"line": {"width": 6}, "mode": "lines", "name": "eigen_1 - 75.54%", "type": "scatter3d", "x": [0.059828716703644674, -0.060136568529731635], "y": [-0.007250993838332416, 0.00835096201224546], "z": [0.004017009839781896, -0.0018323790966988931]}, {"line": {"width": 6}, "mode": "lines", "name": "eigen_2 - 21.93%", "type": "scatter3d", "x": [0.0005635591511639279, -0.0008714109772508839], "y": [-0.0059210758660686825, 0.007021044039981726], "z": [-0.030882732638242143, 0.03306736338132515]}, {"line": {"width": 6}, "mode": "lines", "name": "eigen_3 - 2.53%", "type": "scatter3d", "x": [0.0013513948466569094, -0.0016592466727438657], "y": [0.0113200632733247, -0.010220095099411656], "z": [-0.0010535385746635755, 0.0032381693177465786]}],
+                        {"scene": {"aspectmode": "auto", "xaxis": {"title": {"text": "SPY"}}, "yaxis": {"title": {"text": "IEF"}}, "zaxis": {"title": {"text": "GLD"}}}, "template": {"data": {"bar": [{"error_x": {"color": "#2a3f5f"}, "error_y": {"color": "#2a3f5f"}, "marker": {"line": {"color": "#E5ECF6", "width": 0.5}}, "type": "bar"}], "barpolar": [{"marker": {"line": {"color": "#E5ECF6", "width": 0.5}}, "type": "barpolar"}], "carpet": [{"aaxis": {"endlinecolor": "#2a3f5f", "gridcolor": "white", "linecolor": "white", "minorgridcolor": "white", "startlinecolor": "#2a3f5f"}, "baxis": {"endlinecolor": "#2a3f5f", "gridcolor": "white", "linecolor": "white", "minorgridcolor": "white", "startlinecolor": "#2a3f5f"}, "type": "carpet"}], "choropleth": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "type": "choropleth"}], "contour": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "contour"}], "contourcarpet": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "type": "contourcarpet"}], "heatmap": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "heatmap"}], "heatmapgl": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "heatmapgl"}], "histogram": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "histogram"}], "histogram2d": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "histogram2d"}], "histogram2dcontour": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "histogram2dcontour"}], "mesh3d": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "type": "mesh3d"}], "parcoords": [{"line": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "parcoords"}], "pie": [{"automargin": true, "type": "pie"}], "scatter": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scatter"}], "scatter3d": [{"line": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scatter3d"}], "scattercarpet": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scattercarpet"}], "scattergeo": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scattergeo"}], "scattergl": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scattergl"}], "scattermapbox": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scattermapbox"}], "scatterpolar": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scatterpolar"}], "scatterpolargl": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scatterpolargl"}], "scatterternary": [{"marker": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "type": "scatterternary"}], "surface": [{"colorbar": {"outlinewidth": 0, "ticks": ""}, "colorscale": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "type": "surface"}], "table": [{"cells": {"fill": {"color": "#EBF0F8"}, "line": {"color": "white"}}, "header": {"fill": {"color": "#C8D4E3"}, "line": {"color": "white"}}, "type": "table"}]}, "layout": {"annotationdefaults": {"arrowcolor": "#2a3f5f", "arrowhead": 0, "arrowwidth": 1}, "coloraxis": {"colorbar": {"outlinewidth": 0, "ticks": ""}}, "colorscale": {"diverging": [[0, "#8e0152"], [0.1, "#c51b7d"], [0.2, "#de77ae"], [0.3, "#f1b6da"], [0.4, "#fde0ef"], [0.5, "#f7f7f7"], [0.6, "#e6f5d0"], [0.7, "#b8e186"], [0.8, "#7fbc41"], [0.9, "#4d9221"], [1, "#276419"]], "sequential": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]], "sequentialminus": [[0.0, "#0d0887"], [0.1111111111111111, "#46039f"], [0.2222222222222222, "#7201a8"], [0.3333333333333333, "#9c179e"], [0.4444444444444444, "#bd3786"], [0.5555555555555556, "#d8576b"], [0.6666666666666666, "#ed7953"], [0.7777777777777778, "#fb9f3a"], [0.8888888888888888, "#fdca26"], [1.0, "#f0f921"]]}, "colorway": ["#636efa", "#EF553B", "#00cc96", "#ab63fa", "#FFA15A", "#19d3f3", "#FF6692", "#B6E880", "#FF97FF", "#FECB52"], "font": {"color": "#2a3f5f"}, "geo": {"bgcolor": "white", "lakecolor": "white", "landcolor": "#E5ECF6", "showlakes": true, "showland": true, "subunitcolor": "white"}, "hoverlabel": {"align": "left"}, "hovermode": "closest", "mapbox": {"style": "light"}, "paper_bgcolor": "white", "plot_bgcolor": "#E5ECF6", "polar": {"angularaxis": {"gridcolor": "white", "linecolor": "white", "ticks": ""}, "bgcolor": "#E5ECF6", "radialaxis": {"gridcolor": "white", "linecolor": "white", "ticks": ""}}, "scene": {"xaxis": {"backgroundcolor": "#E5ECF6", "gridcolor": "white", "gridwidth": 2, "linecolor": "white", "showbackground": true, "ticks": "", "zerolinecolor": "white"}, "yaxis": {"backgroundcolor": "#E5ECF6", "gridcolor": "white", "gridwidth": 2, "linecolor": "white", "showbackground": true, "ticks": "", "zerolinecolor": "white"}, "zaxis": {"backgroundcolor": "#E5ECF6", "gridcolor": "white", "gridwidth": 2, "linecolor": "white", "showbackground": true, "ticks": "", "zerolinecolor": "white"}}, "shapedefaults": {"line": {"color": "#2a3f5f"}}, "ternary": {"aaxis": {"gridcolor": "white", "linecolor": "white", "ticks": ""}, "baxis": {"gridcolor": "white", "linecolor": "white", "ticks": ""}, "bgcolor": "#E5ECF6", "caxis": {"gridcolor": "white", "linecolor": "white", "ticks": ""}}, "title": {"x": 0.05}, "xaxis": {"automargin": true, "gridcolor": "white", "linecolor": "white", "ticks": "", "title": {"standoff": 15}, "zerolinecolor": "white", "zerolinewidth": 2}, "yaxis": {"automargin": true, "gridcolor": "white", "linecolor": "white", "ticks": "", "title": {"standoff": 15}, "zerolinecolor": "white", "zerolinewidth": 2}}}, "title": {"text": "SPY -vs- IEF -vs- GLD"}},
+                        {"responsive": true}
+                    ).then(function(){
+
+var gd = document.getElementById('405fdfea-d82f-4437-9dda-f6df869a03cd');
+var x = new MutationObserver(function (mutations, observer) {{
+        var display = window.getComputedStyle(gd).display;
+        if (!display || display === 'none') {{
+            console.log([gd, 'removed!']);
+            Plotly.purge(gd);
+            observer.disconnect();
+        }}
+}});
+
+// Listen for the removal of the full notebook cells
+var notebookContainer = gd.closest('#notebook-container');
+if (notebookContainer) {{
+    x.observe(notebookContainer, {childList: true});
+}}
+
+// Listen for the clearing of the current output cell
+var outputEl = gd.closest('.output');
+if (outputEl) {{
+    x.observe(outputEl, {childList: true});
+}}
+
+                        })
+                };
+                });
+            </script>
+        </div>
+
+
+
 
 
 
